--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ivu-plus/i-form-create-test",
   "moduleName": "FormCreate",
-  "version": "1.0.11",
+  "version": "1.0.12",
   "description": "前端动态表单组件",
   "author": "<gao911222@163.com>",
   "license": "MIT",
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
-    "element-plus": "^2.7.5",
+    "element-plus": "^2.9.4",
     "axios": "^1.7.9",
     "vue": "^3.4.27",
     "vue-router": "^4.5.0"
@@ -25,8 +25,9 @@
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@rollup/plugin-alias": "^5.1.0",
-    "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-image": "^3.0.3",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
     "@vitejs/plugin-vue": "^5.0.5",
@@ -35,6 +36,7 @@
     "@vue/composition-api": "^1.7.2",
     "autoprefixer": "^10.4.19",
     "rollup": "^4.27.4",
+    "radash": "^12.1.0",
     "prettier": "^3.3.2",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
